force-app/main/default/objects/Case/fields/Actions_Taken_By_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken_By_Dealer__c</fullName>
    <label>Actions Taken By Dealer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>