force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>Asset.Model_Name__r.Brand_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>