force-app/main/default/objects/Case/fields/Engine_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Serial_Number__c</fullName>
    <formula>Asset.Engine_Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Engine Serial #</label>
    <type>Text</type>
</CustomField>