force-app/main/default/objects/Case/fields/Global_Main_Area__c.field-meta.xml
<CustomField>
    <fullName>Global_Main_Area__c</fullName>
    <label>Global Main Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aftermarket Technologies (500.034)</fullName>
            </value>
            <value>
                <fullName>Axles/Drawbars/Auto Pickup Hitches (000.001)</fullName>
            </value>
            <value>
                <fullName>Body/Chassis &amp; Frame (100.002)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>