force-app/main/default/objects/Case/fields/Machine_Usage__c.field-meta.xml
<CustomField>
    <fullName>Machine_Usage__c</fullName>
    <formula>Asset.Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Machine Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>