force-app/main/default/objects/Case/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <formula>Asset.Model_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Model Number</label>
    <type>Text</type>
</CustomField>