force-app/main/default/objects/Case/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <label>Part Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>