force-app/main/default/objects/Case/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>