force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-Machine Immobilized</fullName>
            </value>
            <value>
                <fullName>B-Impaired Functionality</fullName>
            </value>
            <value>
                <fullName>C-Nuisance</fullName>
            </value>
            <value>
                <fullName>D-Suitability for Intended purpose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>