force-app/main/default/objects/Case/fields/Used_With__c.field-meta.xml
<CustomField>
    <fullName>Used_With__c</fullName>
    <label>Used With</label>
    <length>50</length>
    <type>Text</type>
</CustomField>